# tymux

./: .gitignore  Cargo.toml  README.md
.claude/: product-marketing-context.md
.github/workflows/: ci.yml  release.yml
clients/ts/: README.md  package-lock.json  package.json  tsconfig.json
clients/ts/examples/: attach.ts  capture-pane.ts  client.ts  list-sessions.ts
clients/ts/test/: daemon.ts  integration.test.ts
crates/tymux-cli/: Cargo.toml
crates/tymux-cli/src/: config.rs  copy_mode.rs  input.rs  main.rs  status_bar.rs
crates/tymux-core/: Cargo.toml
crates/tymux-core/src/: engine.rs  layout.rs  lib.rs  pane.rs  persistence.rs
crates/tymux-core/tests/: layout_invariants.proptest-regressions  layout_invariants.rs
crates/tymux-e2e/: Cargo.toml
crates/tymux-e2e/src/: daemon.rs  golden.rs  harness.rs  lib.rs
crates/tymux-e2e/tests/: disconnect_survival_e2e.rs  golden_snapshot_e2e.rs  keybinding_e2e.rs  smoke.rs  splits_e2e.rs  status_bar_e2e.rs
crates/tymux-e2e/tests/snapshots/: golden_snapshot_e2e__attach_screen_after_deterministic_output_matches_golden_snapshot.snap
crates/tymux-proto/: Cargo.toml  build.rs
crates/tymux-proto/src/: lib.rs
crates/tymuxd/: Cargo.toml
crates/tymuxd/src/: main.rs
crates/tymuxd/tests/: daemon_startup.rs  restart_persistence.rs  sigterm_flush.rs
docs/adr/: 0001-single-pane-per-session-for-now.md  0002-musl-pty-spike-result.md
docs/reviews/: is-it-ready-2026-07-13.md  v1-release-verification.md
docs/ux/: journey-map.md
logos/: preview.html
project_plans/v1-release/: requirements.md
project_plans/v1-release/decisions/: ADR-001-layout-tree-data-structure.md  ADR-002-persistence-durability-tiers.md  ADR-003-typescript-client-node-only-scope.md  ADR-004-concurrent-attacher-geometry-policy.md  ADR-005-prefix-key-model-for-keybindings.md  ADR-006-single-owner-writer-pattern.md
project_plans/v1-release/design/: ux.md
project_plans/v1-release/implementation/: adversarial-review.md  architecture-review.md  plan.md  pre-mortem.md  validation.md
project_plans/v1-release/research/: architecture.md  build-vs-buy.md  features.md  pitfalls.md  stack.md  ux.md
proto/: buf.gen.yaml  buf.yaml
proto/tymux/v1/: tymux.proto
