[package]
name = "tymux-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
portable-pty = { workspace = true }
vt100 = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
proptest = "1"
